# agent-search

./: .env.example  .gitignore  .loop-commit-msg  AGENTS.md  ARCHITECTURE_TRACKER.md  IMPLEMENTATION_PLAN.md  LICENSE  PROMPT_build.md  PROMPT_plan.md  PROMPT_plan_work.md  README.md  completed.md  docker-compose.yml  launch-devtools.sh  loop.sh  openapi.json  prompt_architecture.md  prompt_test.md  spec.md  system.md  test_completed.md  test_plan.md
sdk/core/: README.md  pyproject.toml
sdk/core/examples/: hitl_walkthrough.py
sdk/core/src/: config.py  db.py  models.py
sdk/core/src/agent_search/: __init__.py  config.py  errors.py  public_api.py
sdk/core/src/schemas/: __init__.py  agent.py  benchmark.py  decomposition.py  internal_data.py
sdk/core/src/services/: __init__.py  agent_jobs.py  agent_service.py  benchmark_artifact_registry.py  benchmark_citation_service.py  benchmark_execution_adapter.py  benchmark_metrics_service.py  benchmark_modes.py  benchmark_retrieval_metrics_service.py  benchmark_runner.py  idempotency_service.py  initial_answer_service.py  internal_data_jobs.py  internal_data_service.py  query_expansion_service.py  reranker_service.py  subanswer_service.py  vector_store_service.py  wiki_ingestion_service.py
sdk/core/src/utils/: langfuse_tracing.py
src/backend/: Dockerfile  alembic.ini  config.py  main.py  models.py  pyproject.toml  pytest.ini  requirements.txt  schemas.py
src/backend/agent_search/: __init__.py  config.py  public_api.py
src/backend/agent_search/runtime/: __init__.py  jobs.py  lifecycle_events.py  persistence.py  resume.py  runner.py  state.py
src/backend/agent_search/vectorstore/: __init__.py  langchain_adapter.py  protocol.py
src/backend/agents/: __init__.py  base.py  coordinator.py  factory.py  langgraph_agent.py
src/backend/alembic/: env.py
src/backend/alembic/versions/: 0001_init_pgvector.py  0001_scaffold.py  0002_internal_data_tables.py  0003_pgvector_chunk_embeddings.py  0003_pgvector_internal_embeddings.py  0004_chunk_metadata.py  001_add_internal_documents_tables.py  002_add_benchmark_run_metadata_tables.py  003_add_benchmark_results_table.py  004_add_benchmark_quality_scores_table.py  005_add_benchmark_citation_tables.py  006_add_benchmark_timing_fields.py  007_add_benchmark_retrieval_metrics_table.py  008_add_runtime_execution_durability_tables.py
src/backend/benchmarks/: export.py  retention.py  run.py
src/backend/benchmarks/corpus/: internal_v1_manifest.json
src/backend/benchmarks/datasets/: __init__.py  schema.md  schema.py
src/backend/benchmarks/drb/: __init__.py  export_raw_data.py  io_contract.py  parity_runner.py
src/backend/benchmarks/tools/: __init__.py  generate_questions.py  load_corpus.py  review_queue.py
src/backend/common/db/: __init__.py  benchmark_wipe.py  wipe.py
src/backend/observability/: README.md  __init__.py  langfuse.py
src/backend/routers/: agent.py  benchmarks.py  health.py  internal_data.py  mcp.py  search.py  web.py
src/backend/schemas/: __init__.py  agent.py  benchmark.py  internal_data.py  mcp.py  search.py  web.py
src/backend/services/: agent_jobs.py  agent_service.py  answer_synthesis_service.py  benchmark_jobs.py  benchmark_quality_service.py  benchmark_runner.py  benchmark_summary_service.py  document_validation_service.py  health_service.py  initial_answer_service.py  internal_data_service.py  mcp_service.py  query_expansion_service.py  refinement_decision_service.py  refinement_decomposition_service.py  reranker_service.py  retrieval_service.py  runtime_service.py  search_service.py  subanswer_service.py  subanswer_verification_service.py  validation_service.py  vector_store_service.py  web_service.py  wiki_ingestion_service.py
src/backend/tests/: conftest.py
src/backend/tests/agent/: test_agent_eval_contracts.py  test_agent_smoke.py
src/backend/tests/agents/: test_coordinator_agent.py
src/backend/tests/api/: test_agent_plan.py  test_agent_run.py  test_agent_run_tracing.py  test_answer_synthesis.py  test_benchmark_compare_api.py  test_benchmark_runs_api.py  test_deepagent_persistence.py  test_deepagent_run_config.py  test_deepagent_subagents.py  test_health.py  test_internal_data_loading.py  test_internal_data_wipe.py  test_langchain_runtime_setup.py  test_langfuse_observability.py  test_mcp_exposure.py  test_orchestration_langgraph.py  test_per_subquery_retrieval.py  test_pgvector_storage.py  test_retrieval_validation.py  test_run_events_stream.py  test_scaffold_endpoints.py  test_streaming_agent_heartbeat.py  test_streaming_compile_invoke_dummy.py  test_sync_stream_contract_parity.py  test_trace_metadata_contract.py  test_web_tools.py
src/backend/tests/benchmarks/: test_benchmark_artifact_registry.py  test_corpus_loader.py  test_dataset_curation_workflow.py  test_dataset_schema.py  test_drb_io_contract.py
src/backend/tests/contracts/: test_public_contracts.py
src/backend/tests/db/: test_benchmark_results_schema.py  test_benchmark_run_metadata_schema.py  test_benchmark_wipe.py  test_wipe.py
src/backend/tests/e2e/: test_benchmark_pipeline.py  test_drb_export_parity_smoke.py
src/backend/tests/fixtures/: agent_cases.py
src/backend/tests/runtime/: test_execution_identity.py  test_lifecycle_events.py  (+4 more)
src/backend/tools/: __init__.py  retriever_tool.py
src/backend/utils/: __init__.py  agent_callbacks.py  agent_pipeline.py  chunking.py  embeddings.py  google_docs.py  langfuse_tracing.py  query_decomposition.py  tool_selection.py
(+487 files in other folders)
