[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "agent-search-core"
version = "0.1.9"
description = "In-process SDK runtime for agent-search with optional callback-driven Langfuse tracing"
readme = "README.md"
authors = [{ name = "agent-search maintainers" }]
keywords = ["rag", "agent", "search", "sdk", "langchain"]
requires-python = ">=3.11,<3.14"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "pydantic==2.10.6",
  "langchain>=1.2.0",
  "langchain-classic>=1.0.0",
  "langchain-community==0.3.31",
  "langchain-openai>=0.3.0",
  "langchain-text-splitters>=1.1.1",
  "flashrank>=0.2.10",
  "langfuse>=3.0.0",
  "pgvector==0.3.6",
  "psycopg[binary]==3.2.6",
  "sqlalchemy==2.0.40",
]

[project.urls]
Homepage = "https://github.com/nickbohm/agent-search"
Repository = "https://github.com/nickbohm/agent-search"
Issues = "https://github.com/nickbohm/agent-search/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_search", "src/schemas", "src/services", "src/utils"]

[tool.hatch.build.targets.wheel.force-include]
"src/config.py" = "config.py"
"src/db.py" = "db.py"

[tool.hatch.build.targets.sdist]
include = ["src/**", "README.md", "pyproject.toml", "src/config.py", "src/db.py"]
