[project]
name = "agent-search-backend"
version = "0.1.0"
description = "FastAPI backend for agent-search with optional callback-driven Langfuse tracing"
requires-python = ">=3.11,<3.14"
dependencies = [
  "fastapi==0.115.12",
  "uvicorn[standard]==0.34.0",
  "sqlalchemy==2.0.40",
  "psycopg[binary]==3.2.6",
  "alembic==1.15.1",
  "pgvector==0.3.6",
  "pydantic==2.10.6",
  "langchain>=1.2.0",
  "langchain-classic>=1.0.0",
  "langchain-community==0.3.31",
  "langchain-openai>=0.3.0",
  "langfuse>=3.0.0",
  "wikipedia>=1.4.0",
  "langchain-text-splitters>=1.1.1",
]
